Update names files, make consent index as first page

--- a/MemoryGame/MemoryGame.csproj
+++ b/MemoryGame/MemoryGame.csproj
@@ -147,21 +147,21 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
-    <Content Include="Scripts\JS\consent.js" />
+    <Content Include="Scripts\JS\Consent.js" />
     <Content Include="Scripts\JS\DisagreePage.js" />
     <Content Include="Scripts\JS\EndGame.js" />
     <Content Include="Scripts\JS\EndPage.js" />
     <Content Include="Scripts\JS\ErrorPage.js" />
-    <Content Include="Scripts\JS\feedback.js" />
+    <Content Include="Scripts\JS\Feedback.js" />
     <Content Include="Scripts\JS\Game.js" />
     <Content Include="Scripts\JS\InstructionsOne.js" />
     <Content Include="Scripts\JS\InstructionsTwo.js" />
-    <Content Include="Scripts\JS\interfaceExample.js" />
+    <Content Include="Scripts\JS\InterfaceExample.js" />
     <Content Include="Scripts\JS\MobileError.js" />
     <Content Include="Scripts\JS\PersonalDetails.js" />
     <Content Include="Scripts\JS\SecondTimeError.js" />
     <Content Include="Scripts\JS\TooManyTries.js" />
-    <Content Include="Scripts\JS\verificationRulesScript.js" />
+    <Content Include="Scripts\JS\VerificationRulesScript.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -177,6 +177,21 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\ConsentIndex.cshtml" />
+    <Content Include="Views\Home\DisagreePage.cshtml" />
+    <Content Include="Views\Home\EndGame.cshtml" />
+    <Content Include="Views\Home\EndPage.cshtml" />
+    <Content Include="Views\Home\ErrorPage.cshtml" />
+    <Content Include="Views\Home\Feedback.cshtml" />
+    <Content Include="Views\Home\Game.cshtml" />
+    <Content Include="Views\Home\InstructionsOne.cshtml" />
+    <Content Include="Views\Home\InstructionsTwo.cshtml" />
+    <Content Include="Views\Home\InterfaceExample.cshtml" />
+    <Content Include="Views\Home\MobileError.cshtml" />
+    <Content Include="Views\Home\PersonalDetails.cshtml" />
+    <Content Include="Views\Home\SecondTimeError.cshtml" />
+    <Content Include="Views\Home\TooManyTries.cshtml" />
+    <Content Include="Views\Home\VerificationRules.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
