--- a/MemoryGame/MemoryGame.csproj
+++ b/MemoryGame/MemoryGame.csproj
@@ -157,6 +157,7 @@
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\css\consentIndex.css" />
     <Content Include="Content\DataTable.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
