--- a/MemoryGame/Web.config
+++ b/MemoryGame/Web.config
@@ -9,6 +9,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="avi" value="fraind2" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
