--- a/MemoryGame/MemoryGame.csproj
+++ b/MemoryGame/MemoryGame.csproj
@@ -204,6 +204,7 @@
     <Content Include="Scripts\JS\ErrorPage.js" />
     <Content Include="Scripts\JS\Feedback.js" />
     <Content Include="Scripts\JS\Game.js" />
+    <Content Include="Scripts\JS\Game1.js" />
     <Content Include="Scripts\JS\InstructionsOne.js" />
     <Content Include="Scripts\JS\InstructionsTwo.js" />
     <Content Include="Scripts\JS\InterfaceExample.js" />
@@ -324,6 +325,7 @@
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Admin\DataTable.cshtml" />
+    <Content Include="Views\Home\Game1.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
