--- a/MemoryGame/MemoryGame.csproj
+++ b/MemoryGame/MemoryGame.csproj
@@ -254,10 +254,12 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\css\consentIndex.css" />
     <Content Include="Content\DataTable.css" />
+    <Content Include="Content\css\game1.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="resources\background.PNG" />
+    <Content Include="resources\player1.jpg" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
