--- a/MemoryGame/MemoryGame.csproj
+++ b/MemoryGame/MemoryGame.csproj
@@ -224,6 +224,7 @@
     <Content Include="Content\css\instruction1.css" />
     <Content Include="Content\css\instruction2.css" />
     <Content Include="Content\css\interfaceExample.css" />
+    <Content Include="Content\css\personalDetails.css" />
     <Content Include="Content\css\verificationRules.css" />
     <Content Include="Content\DataTable.css" />
     <Content Include="Core\Compression\Snappy\lib\win\snappy32.dll" />
@@ -545,7 +546,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>54650</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>https://localhost:44393/MemoryGame/</IISUrl>
+          <IISUrl>https://localhost:44391/MemoryGame/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
