--- a/MemoryGame/MemoryGame.csproj
+++ b/MemoryGame/MemoryGame.csproj
@@ -220,6 +220,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\css\consentIndex.css" />
+    <Content Include="Content\css\endings.css" />
     <Content Include="Content\css\feedback.css" />
     <Content Include="Content\css\game1.css" />
     <Content Include="Content\css\instruction1.css" />
