--- a/MemoryGame/Web.config
+++ b/MemoryGame/Web.config
@@ -4,6 +4,11 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <connectionStrings>
+    <!--mongodb+srv://itay198:a1951995@cluster0.q47vd.mongodb.net/WordSearchDB?retryWrites=true;w=majority-->
+    <add name="ConnectionString" connectionString="mongodb+srv://BScProject:agent345!@cluster0.mpjnr.mongodb.net/WordSearchDB?retryWrites=true;w=majority" />
+
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
