--- a/MemoryGame/Web.config
+++ b/MemoryGame/Web.config
@@ -6,7 +6,7 @@
 <configuration>
   <connectionStrings>
     <!--mongodb+srv://itay198:a1951995@cluster0.q47vd.mongodb.net/WordSearchDB?retryWrites=true;w=majority-->
-    <add name="ConnectionString" connectionString="mongodb+srv://BScProject:agent345!@cluster0.mpjnr.mongodb.net/WordSearchDB?retryWrites=true;w=majority" />
+    <add name="ConnectionString" connectionString="mongodb+srv://BScProject:agent345!@cluster0.mpjnr.mongodb.net/MemoryGame?retryWrites=true;w=majority" />
 
   </connectionStrings>
   <appSettings>
