still not working

--- a/MemoryGame/Web.config
+++ b/MemoryGame/Web.config
@@ -14,12 +14,22 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="avi" value="fraind2" />
+    <add key="avi" value="fraind0" />
+    <add key="Score" value="20" />
+    <add key="OverallTime" value="200000" />
+    <add key="PersonalTime" value="100000" />
+    <add key="NumOfCards1" value="2" />
+    <add key="NumOfCards2" value="2" />
+    <add key="NumOfAgents" value="2" />
+    <add key="HintConfig" value="3" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
   </system.web>
+  
+   
+  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
