--- a/MemoryGame/Web.config
+++ b/MemoryGame/Web.config
@@ -22,6 +22,8 @@
     <add key="NumOfCards2" value="2" />
     <add key="NumOfAgents" value="2" />
     <add key="HintConfig" value="3" />
+    <add key="Password" value="rider" />
+    <add key="Name" value="admin" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
