--- a/MemoryGame/MemoryGame.csproj
+++ b/MemoryGame/MemoryGame.csproj
@@ -537,7 +537,7 @@
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Admin\DataTable.cshtml" />
     <Content Include="Views\Home\Game1.cshtml" />
-    <Content Include="Views\Admin\login.cshtml" />
+    <Content Include="Views\Admin\Login.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
