--- a/MemoryGame/MemoryGame.csproj
+++ b/MemoryGame/MemoryGame.csproj
@@ -233,6 +233,7 @@
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\css\chooseReplay.css" />
     <Content Include="Content\css\consentIndex.css" />
     <Content Include="Content\css\endings.css" />
     <Content Include="Content\css\feedback.css" />
