--- a/MemoryGame/MemoryGame.csproj
+++ b/MemoryGame/MemoryGame.csproj
@@ -243,6 +243,7 @@
     <Content Include="Content\css\interfaceExample.css" />
     <Content Include="Content\css\login.css" />
     <Content Include="Content\css\personalDetails.css" />
+    <Content Include="Content\css\endGame.css" />
     <Content Include="Content\css\verificationRules.css" />
     <Content Include="Content\DataTable.css" />
     <Content Include="Core\Compression\Snappy\lib\win\snappy32.dll" />
