--- a/MemoryGame/MemoryGame.csproj
+++ b/MemoryGame/MemoryGame.csproj
@@ -245,7 +245,7 @@
     <Content Include="Content\css\personalDetails.css" />
     <Content Include="Content\css\endGame.css" />
     <Content Include="Content\css\verificationRules.css" />
-    <Content Include="Content\DataTable.css" />
+    <Content Include="Content\css\DataTable.css" />
     <Content Include="Core\Compression\Snappy\lib\win\snappy32.dll" />
     <Content Include="Core\Compression\Snappy\lib\win\snappy64.dll" />
     <Content Include="Core\Compression\Zstandard\lib\win\libzstd.dll" />
