--- a/MemoryGame/Web.config
+++ b/MemoryGame/Web.config
@@ -21,6 +21,8 @@
     <add key="NumOfCards1" value="2" />
     <add key="NumOfCards2" value="2" />
     <add key="NumOfAgents" value="2" />
+    <add key="typeOfAgent1" value="agent" />
+    <add key="typeOfAgent2" value="agent" />
     <add key="HintConfig" value="3" />
     <add key="Password" value="rider" />
     <add key="Name" value="admin" />
