resolved all bugs still need to add somthing for chen on dataTbale

--- a/MemoryGame/Web.config
+++ b/MemoryGame/Web.config
@@ -10,6 +10,23 @@
 
   </connectionStrings>
   <appSettings>
+    <!--
+    
+    HintConfig:
+    1 - showing first live card on board.
+    2 - showing random live card on board.
+    3 - showing last seen card pair.
+    
+    typeOfAgent:
+    agent - pick up the 2 first cards
+    OptimalAgent - picks up the best 2 possible cards
+    BadAgent - picks up the 2 worst cards
+    random - random choose of the agent config
+    
+    ** num of cards must be even: NumOfCards1 * NumOfCards2 - must be even
+    
+    
+    -->
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
@@ -21,8 +38,8 @@
     <add key="NumOfCards1" value="2" />
     <add key="NumOfCards2" value="2" />
     <add key="NumOfAgents" value="2" />
-    <add key="typeOfAgent1" value="agent" />
-    <add key="typeOfAgent2" value="agent" />
+    <add key="typeOfAgent1" value="random" />
+    <add key="typeOfAgent2" value="random" />
     <add key="HintConfig" value="3" />
     <add key="Password" value="rider" />
     <add key="Name" value="admin" />
